--- a/styles/global.css
+++ b/styles/global.css
@@ -1,3 +1,73 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.splash__screen{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100%;
+    z-index: 10;
+}
+
+.splash__screen.complete{
+    pointer-events: none;
+}
+
+.left{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 50%;
+    height: 100%;
+    background-color: #161616;
+    border-right: 1px solid #161616;
+    transition: transform 1s;
+}
+
+.left.active{
+    transform: translateX(-100%);
+    border-right: 1px solid #ffffff;
+}
+
+
+.right{
+    position: absolute;
+    left: 50%;
+    top: 0;
+    width: 50%;
+    height: 100%;
+    background-color: #161616;
+    border-left: 1px solid #161616;
+    transition: transform 1s;
+}
+
+.right.active{
+    transform: translateX(100%);
+    border-left: 1px solid #ffffff;
+}
+
+.progress__bar{
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 1px;
+    height: 0%;
+    background-color: white;
+
+    transition: height 1s;
+}
+
+.progress__bar.complete{
+    opacity: 0;
+}
+
+.percentage{
+   position: absolute;
+   padding-top: 100%;
+   bottom: 0;
+   left: 1rem;
+}
