added global context to track if loading has triggered only once per session

--- a/styles/global.css
+++ b/styles/global.css
@@ -16,6 +16,12 @@
     pointer-events: none;
 }
 
+.splash__screen.invisible{
+    display: hidden;
+}
+
+
+
 .left{
     position: absolute;
     left: 0;
